--- a/index.html
+++ b/index.html
@@ -2,29 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>replit</title>
+    <title></title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <center>
-  <h2> Calculate Age from Birthday </h2>
-  <br>
-  <button onclick="calcAgeNow()"> Calculate Age </button>
-  </center>
     <script>
-      function calcAgeNow() {
-        let bday = new Date("06/24/2008");
-        console.log("bday: " + bday)
-        let month_diff = Date.now() - bday.getTime();
-        console.log("month_diff: " + month_diff + "=" + Date.now() + "-" + bday.getTime());
-        let age_dt = new Date(month_diff);
-        console.log("age_dt: " + age_dt);
-        let year = age_dt.getUTCFullYear();
-        console.log("year: " + year);
-        let age = Math.abs(year - 1970);
-        console.log("age: " + age);
-        document.write("Age of the date entered: " + age + " years");
+      function  {
+        let bday = prompt("Day");
+        let bmonth = prompt("Month");
+        let byear = prompt("Year");
+        let bdate = new Date(bmonth + "/" + bday + "/" + byear);
+        if (byear % 400 == 0) {
+          bday += 86400000;
+        }
+        else if (byear % 100 == 0) {
+          ;
+        }
+        else if (byear % 4 == 0) {
+          bday += 86400000;
+        }
       }
     </script>
   </body>
